feat: add test & command line execution & change to jdk17
Closes: Spring-01